CSDEV/objects/Account.object
<CustomObject>
    <fields>
        <fullName>HAE_Account_Note__c</fullName>
        <description>HAE: This is responsible to capture note and same will reflect in case(CS Account Note).</description>
        <label>Account Note</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HAE_Operating_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: Operating Unit can be associated with multiple accounts.</description>
        <label>Operating Unit</label>
        <referenceTo>HAE_Operating_Unit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_VIP_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This flag is responsible to decide VIP customer.</description>
        <label>VIP Customer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>